<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"/>
    <item
        android:id="@+id/controlFragment"
        android:title="@string/control"
        android:icon="@drawable/ic_control_24"/>

    <item android:id="@+id/cameraFragment"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera_24"
        />

<!--    <item-->
<!--        android:id="@+id/menu_store"-->
<!--        android:title="Store"-->
<!--        android:icon="@drawable/ic_store_24"/>-->
    <item
        android:id="@+id/ECommerceFragment"
        android:title="@string/shop"
        android:icon="@drawable/ic_ecommerce_24"/>

    <item
        android:id="@+id/moreFragment"
        android:title="@string/more"
        android:icon="@drawable/ic_round_menu_24"/>
</menu>