<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.graduation.farmerfriend.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_ECommerceFragment"
            app:destination="@id/ECommerceFragment" />
    </fragment>
    <fragment
        android:id="@+id/controlFragment"
        android:name="com.graduation.farmerfriend.control.ControlFragment"
        android:label="@string/control"
        tools:layout="@layout/fragment_control" />
    <fragment
        android:id="@+id/ECommerceFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.ECommerceFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_e_commerce" >
        <action
            android:id="@+id/action_ECommerceFragment_to_fertilizerProductsFragment"
            app:destination="@id/fertilizerProductsFragment" />
        <action
            android:id="@+id/action_ECommerceFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:popUpTo="@id/homeFragment"/>
        <action
            android:id="@+id/action_ECommerceFragment_to_bestSellerFragment"
            app:destination="@id/bestSellerFragment"
            app:popUpTo="@id/homeFragment"/>
        <action
            android:id="@+id/action_ECommerceFragment_to_wishlistFragment"
            app:destination="@id/wishlistFragment"
            app:popUpTo="@id/homeFragment"/>
        <action
            android:id="@+id/action_ECommerceFragment_to_seedProductsFragment"
            app:destination="@id/seedProductsFragment"/>
        <action
            android:id="@+id/action_ECommerceFragment_to_toolProductsFragment"
            app:destination="@id/toolProductsFragment"/>
        <action
            android:id="@+id/action_ECommerceFragment_to_hotDealsFragment"
            app:destination="@id/hotDealsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.graduation.farmerfriend.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/fertilizerProductsFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.product_activity.FertilizerProductsFragment"
        android:label="@string/fertilizers"
        tools:layout="@layout/fragment_fertilizer_products" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.graduation.farmerfriend.CartFragment"
        android:label="@string/Cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/bestSellerFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.deals.BestSellerFragment"
        android:label="@string/best_sellers"
        tools:layout="@layout/fragment_best_selers" />
    <fragment
        android:id="@+id/wishlistFragment"
        android:name="com.graduation.farmerfriend.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/seedProductsFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.product_activity.SeedProductsFragment"
        android:label="@string/seeds"
        tools:layout="@layout/fragment_seed_products" />
    <fragment
        android:id="@+id/toolProductsFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.product_activity.ToolProductsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tool_products" />
    <fragment
        android:id="@+id/hotDealsFragment"
        android:name="com.graduation.farmerfriend.e_commerce.ui.deals.HotDealsFragment"
        android:label="@string/hot_deals"
        tools:layout="@layout/fragment_hot_deals"/>
</navigation>