<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".e_commerce.ui.cart.UserDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_user_data_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/setting_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_user_data_frame_items"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/fragment_more_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_user_data_image" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_user_data_frame_items">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular"/>

                <EditText
                    android:id="@+id/User_Data_edittext_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/governorate"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_governorate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/street"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/special_marque"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_special_marque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/city"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/district"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText

                    android:id="@+id/User_Data_edittext_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Property_number_and_apartment_number"
                    android:textColor="@color/mainText"
                    android:fontFamily="@font/maiandra_gd_regular" />

                <EditText
                    android:id="@+id/User_Data_edittext_Property_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/user_data_shape"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/UserDataActivity_textView_location_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/mainText"
            android:fontFamily="@font/maiandra_gd_regular"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/User_Data_button_location"
            app:layout_constraintStart_toStartOf="@+id/User_Data_button_location"
            app:layout_constraintTop_toBottomOf="@+id/User_Data_button_location" />

        <FrameLayout
            android:id="@+id/User_Data_button_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape_user_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserDataActivity_textView_location_address">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/maiandra_gd_regular"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/User_Data_button_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_shape_user_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/maiandra_gd_regular"
                android:textSize="14sp"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>