<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".e_commerce.ui.cart.CartFragment">

    <LinearLayout
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"/>

<!--        <Button-->
<!--            android:id="@+id/cart_button_check_out"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="32dp"-->
<!--            android:backgroundTint="#00796B"-->
<!--            android:text="@string/buy"-->
<!--            android:fontFamily="@font/maiandra_gd_regular"-->
<!--            android:textColor="@color/white"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            tools:layout_editor_absoluteX="32dp" />-->

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cart_button_check_out"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:backgroundTint="#00796B"
        android:fontFamily="@font/maiandra_gd_regular"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="8dp"
        app:cornerRadius="20dp" />

    <LinearLayout
        android:id="@+id/main_activity_no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_noun_no_internet_1378035" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/maiandra_gd_regular"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="@color/mainText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/maiandra_gd_regular"
            android:gravity="center"
            android:text="@string/check_your_conn"
            android:textColor="@color/mainText"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>